--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-WORDPRESS_API_URL="https://faculdadecatolicadomaranhao.com/wp-json/wp/v2"
+WORDPRESS_API_URL="https://www.iesma.com.br/wp-json/wp/v2"
