feat(refact): refact code

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 WORDPRESS_API_URL="https://www.iesma.com.br/wp-json/wp/v2"
 RESEND_API_KEY="re_iCmBenpx_GBMjHRYw9tWJ8fWMPg4SPojE"
+EMAIL_SENDER="ouvidoria@iesma.edu.br"
+EMAIL_RECIPIENT="noreply@faculdadecatolicadomaranhao.com"
