feat: add request to page

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+NEXT_PUBLIC_BASE_URL=""
 WORDPRESS_API_URL="https://www.iesma.com.br/wp-json/wp/v2"
 RESEND_API_KEY="re_iCmBenpx_GBMjHRYw9tWJ8fWMPg4SPojE"
 EMAIL_SENDER="ouvidoria@iesma.edu.br"
